Fix some styling issues
- Some inputs did not apply the intended font-family
- The ControlledSelect (dropdown) should not be too wide

--- a/src/App.css
+++ b/src/App.css
@@ -87,6 +87,7 @@ html {
   text-align: left;
   padding: .3em;
   border: 1px solid var(--color-border);
+  font-family: inherit;
 }
 
 /* General styles for basic elements, applicable to the entire application
