--- a/src/components/AppBtn.css
+++ b/src/components/AppBtn.css
@@ -1,6 +1,7 @@
 /* The default button */
 button.AppBtn {
   background-color: var(--color-bkg-btn-default);
+  font-family: inherit;
   font-size: var(--font-small);
   text-align: center;
   border: 1px solid var(--color-border);
