--- a/src/components/ControlledSelect.css
+++ b/src/components/ControlledSelect.css
@@ -28,6 +28,7 @@
 .ControlledSelect {
   width: 100%;
   min-width: 15ch;
+  max-width: 480px;
   border: 1px solid var(--color-border);
   border-radius: 0.125em;
   padding: 0.25em .5em;
