--- a/src/components/SurveySetup.css
+++ b/src/components/SurveySetup.css
@@ -47,6 +47,7 @@
     border: 1px solid var(--color-border);
     color: var(--color-text-data);
     text-align: center;
+    font-family: inherit;
 }   
 
 .SurveySetup button#start {
